replace zest -> sebu

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/zest-logo-white-fill-outline.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-cropped-bw.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>zest.market</title>
+    <title>sebu.market</title>
   </head>
   <body class="bg-[#f7efe5]">
     <div id="root"></div>
